# project-userauth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg
docker/: README.md
docker/dev/: Dockerfile  docker-compose.yml  dockerdo_build.sh  dockerdo_launch.sh  dockerdo_start.sh
docker/prod/: Dockerfile  dockerdo_build.sh  dockerdo_launch.sh
kubernetes/: README.md  cluster_deploy.sh  cluster_purge.sh  cluster_shutdown.sh  postgres-db.yml  postgres-volume.yml  shared-configmap.yml  shared-secrets.yml  userauth-api.yml
tests/database/: manager_test.py
tests/endpoints/: auth_test.py  resources_logins_test.py  resources_users_test.py
tests/integration/: integration_test.py
userauth/cmdline/: database.py  root.py  server.py
userauth/common/: config.py  policies.py  roles.py
userauth/database/: __init__.py  manager.py  models.py  session.py
userauth/endpoints/: __init__.py  auth.py  errors.py  models.py  resources.py
userauth/picmodel/: __init__.py  celeb_detector.py
