[metadata]
name = userauth
version = 0.1.0
author = Francisco Ramirez
description = Python-based user authentication API server.
long_description = file: README.md, LICENSE
license_files = file: LICENSE
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3


[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    fastapi
    uvicorn
    passlib
    python-jose
    python-multipart
    bcrypt
    sqlalchemy
    aiosqlite
    asyncpg

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    httpx # https://github.com/tiangolo/fastapi/discussions/6195
    pre-commit
    bump2version

[options.entry_points]
console_scripts =
    userauth = userauth.cmdline.root:cmd_root
